examples/netpol/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 20m
              memory: 20Mi
