examples/netpol/redis_sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: main
          image: redis:8
          ports:
            - containerPort: 6379
          startupProbe:
            exec:
              command:
                - redis-cli
                - ping
            periodSeconds: 1
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 6379
            periodSeconds: 10
            failureThreshold: 2
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 40m
              memory: 40Mi
